# deep_nanobarcode

./: LICENSE  README.md  pyproject.toml
deep_nanobarcode/: __init__.py  dataset_handler.py  image_processing.py  model.py  network_components.py  network_main.py
network_params/: .gitignore  best_params.npy  best_params_alfa.npy  best_params_alfa_old.npy  model_config_series_15.json
notebooks/: .gitignore  nanobarcode_classifier_net.ipynb  tomographic_reconstruction.ipynb
output/: .gitignore
