[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-nanobarcode"
version = "2022.0.1"
authors = [
  { name="Mohsen Sadeghi", email="mohsen.sadeghi@fu-berlin.de" },
]
description = "Software package for deep learning based identification of protein nanobarcodes from single-step multiplexed fluorescence imaging"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = ["deep_nanobarcode"]

dependencies = [
    	"numpy",
    	"scipy",
    	"matplotlib",
		"jupyter",
		"tifffile",
		"scikit-image",
		"tqdm",
		"ipyvtklink",
		"torch"
]

[project.urls]
"Homepage" = "https://github.com/noegroup/deep_nanobarcode"
"Bug Tracker" = "https://github.com/noegroup/deep_nanobarcode/issues"

